cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@action_hierarchy.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/action_hierarchy.cedarschema
---
{
  "": {
    "actions": {
      "read": {
        "appliesTo": {
          "principalTypes": [
            "User"
          ],
          "resourceTypes": [
            "User"
          ]
        },
        "memberOf": [
          {
            "id": "readWrite",
            "type": "Action"
          }
        ]
      },
      "readWrite": {
        "appliesTo": {
          "principalTypes": [],
          "resourceTypes": []
        }
      },
      "write": {
        "appliesTo": {
          "principalTypes": [
            "User"
          ],
          "resourceTypes": [
            "User"
          ]
        },
        "memberOf": [
          {
            "id": "readWrite",
            "type": "Action"
          }
        ]
      }
    },
    "entityTypes": {
      "User": {}
    }
  }
}
