cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@action_no_applies_to.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/action_no_applies_to.cedarschema
---
{
  "": {
    "actions": {
      "standalone": {
        "appliesTo": {
          "principalTypes": [],
          "resourceTypes": []
        }
      }
    },
    "entityTypes": {}
  }
}
