cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@basic_entity.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/basic_entity.cedarschema
---
{
  "": {
    "actions": {},
    "entityTypes": {
      "User": {}
    }
  }
}
